fix: modals' styles; body overflow when modal is open; add modals' image property to interface

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ body.dark {
     color: #ffffff;
 }
 
+body.no-scroll {
+    overflow: hidden;
+}
+
 .gradient-text {
     background-image: linear-gradient(to right, #0077b6, #00b4d8);
     background-clip: text;
